// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html for doc from http 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Это документ с сайта 
          <lego-components_link
            data-ref="url"
            href="http://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`html for doc from https 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Это документ с сайта 
          <lego-components_link
            data-ref="url"
            href="https://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`html for doc from ya-serp 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Документ недоступен. Это копия документа с сайта 
          <lego-components_link
            data-ref="url"
            href="http://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
           автоматически создана поисковой системой Яндекса 
          <span
            data-ref="date"
          >
            28.02.2017
          </span>
          .
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`html for doc from ya-serps 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Документ недоступен. Это копия документа с сайта 
          <lego-components_link
            data-ref="url"
            href="https://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
           автоматически создана поисковой системой Яндекса 
          <span
            data-ref="date"
          >
            28.02.2017
          </span>
          .
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`html with show only one page 1`] = `
<div
  class="html js-doc-html html_onePage"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub_blinking"
      data-index="1"
    >
      <div
        class="__page-1 wait"
      />
    </div>
    <div
      class="js-doc-page page onlyOnePageMode page_presentation waitingImageStub"
      data-index="2"
    >
      <div
        class="__page-2 wait"
      />
    </div>
    <div
      class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub"
      data-index="3"
    >
      <div
        class="__page-3 wait"
      />
    </div>
    <div
      class="sliderButtonsWrapper onePage"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      >
        <button
          autocomplete="off"
          class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_left switch-arrow-button_theme_dark"
          type="button"
        >
          <span
            class="ufo-icon icon Button2-Icon"
          >
            <svg
              class="ufo-icon__icon"
              height="48"
              role="none"
              viewBox="0 0 16 16"
              width="48"
            >
              <path
                d="M9.6 4l-4 4 4 4 .8-.8L7.2 8l3.2-3.2z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          autocomplete="off"
          class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_dark"
          type="button"
        >
          <span
            class="ufo-icon icon Button2-Icon"
          >
            <svg
              class="ufo-icon__icon"
              height="48"
              role="none"
              viewBox="0 0 16 16"
              width="48"
            >
              <path
                d="M6.4 12l4-4-4-4-.8.8L8.8 8l-3.2 3.2z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`html-3-pages-wo-size-no-spins 1`] = `
<div
  class="html js-doc-html html_withoutSize"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.xlsx
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="js-doc-page pageWithoutSize page_spreadsheet"
      data-index="1"
    >
      <div
        class="__page-1 fail"
      >
        <span>
          Ошибка загрузки страницы
        </span>
      </div>
    </div>
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="js-doc-page pageWithoutSize page_spreadsheet"
        data-index="2"
      >
        <div
          class="__page-2"
        >
          <div>
            yo
          </div>
        </div>
      </div>
    </div>
    <div
      class="js-doc-page pageWithoutSize page_spreadsheet"
      data-index="3"
    >
      <div
        class="__page-3 fail"
      >
        <span>
          Ошибка загрузки страницы
        </span>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`html-3-pages-wo-size-with-spins 1`] = `
<div
  class="html js-doc-html html_withoutSize"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        тра-та-та
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="spinPage page_spreadsheet"
      >
        <div
          class="wait page-spin-top"
        >
          <lego-components_spin
            progress="true"
            size="l"
            view="default"
          />
        </div>
      </div>
    </div>
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="js-doc-page pageWithoutSize page_spreadsheet"
        data-index="2"
      >
        <div
          class="__page-2"
        >
          <div>
            yo
          </div>
        </div>
      </div>
    </div>
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="spinPage page_spreadsheet"
      >
        <div
          class="wait page-spin-bottom"
        >
          <lego-components_spin
            progress="true"
            size="l"
            view="default"
          />
        </div>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`html-4-pages-with-size 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="js-doc-page page page_pdf waitingImageStub_blinking"
      data-index="1"
      style="width:360px;height:270px"
    >
      <div
        class="__page-1 wait"
      />
    </div>
    <div
      class="js-doc-page page page_pdf"
      data-index="2"
      style="width:180px;height:342px"
    >
      <div
        class="__page-2 fail"
      >
        <span>
          Ошибка загрузки страницы
        </span>
      </div>
    </div>
    <div
      class="js-doc-page page page_pdf"
      data-index="3"
      style="width:450px;height:810px"
    >
      <div
        class="__page-3"
        style="position:absolute;top:0;left:0;width:500px;height:900px;transform-origin:0 0;transform:scale(0.9)"
      >
        <div>
          this is magic
        </div>
      </div>
    </div>
    <div
      class="js-doc-page page page_pdf waitingImageStub"
      data-index="4"
      style="width:540px;height:720px"
    >
      <div
        class="__page-4 wait"
      />
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html for doc from http 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Это документ с сайта 
          <lego-components_link
            data-ref="url"
            href="http://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html for doc from https 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Это документ с сайта 
          <lego-components_link
            data-ref="url"
            href="https://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html for doc from ya-serp 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Документ недоступен. Это копия документа с сайта 
          <lego-components_link
            data-ref="url"
            href="http://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
           автоматически создана поисковой системой Яндекса 
          <span
            data-ref="date"
          >
            28.02.2017
          </span>
          .
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html for doc from ya-serps 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        doc-from-serp.pdf
      </h2>
      <div
        class="disclaimer"
      >
        <span>
          Документ недоступен. Это копия документа с сайта 
          <lego-components_link
            data-ref="url"
            href="https://ya.ru/docs/doc-from-serp.pdf"
            target="_blank"
            theme="normal"
          >
            ya.ru
          </lego-components_link>
           автоматически создана поисковой системой Яндекса 
          <span
            data-ref="date"
          >
            28.02.2017
          </span>
          .
        </span>
      </div>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html with show only one page 1`] = `
<div
  class="html js-doc-html html_onePage"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub_blinking"
      data-index="1"
    >
      <div
        class="__page-1 wait"
      />
    </div>
    <div
      class="js-doc-page page onlyOnePageMode page_presentation waitingImageStub"
      data-index="2"
    >
      <div
        class="__page-2 wait"
      />
    </div>
    <div
      class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub"
      data-index="3"
    >
      <div
        class="__page-3 wait"
      />
    </div>
    <div
      class="sliderButtonsWrapper onePage"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      >
        <button
          autocomplete="off"
          class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_left switch-arrow-button_theme_dark"
          type="button"
        >
          <span
            class="ufo-icon icon Button2-Icon"
          >
            <svg
              class="ufo-icon__icon"
              height="48"
              role="none"
              viewBox="0 0 16 16"
              width="48"
            >
              <path
                d="M9.6 4l-4 4 4 4 .8-.8L7.2 8l3.2-3.2z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          autocomplete="off"
          class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_dark"
          type="button"
        >
          <span
            class="ufo-icon icon Button2-Icon"
          >
            <svg
              class="ufo-icon__icon"
              height="48"
              role="none"
              viewBox="0 0 16 16"
              width="48"
            >
              <path
                d="M6.4 12l4-4-4-4-.8.8L8.8 8l-3.2 3.2z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html-3-pages-wo-size-no-spins 1`] = `
<div
  class="html js-doc-html html_withoutSize"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.xlsx
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="js-doc-page pageWithoutSize page_spreadsheet"
      data-index="1"
    >
      <div
        class="__page-1 fail"
      >
        <span>
          Ошибка загрузки страницы
        </span>
      </div>
    </div>
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="js-doc-page pageWithoutSize page_spreadsheet"
        data-index="2"
      >
        <div
          class="__page-2"
        >
          <div>
            yo
          </div>
        </div>
      </div>
    </div>
    <div
      class="js-doc-page pageWithoutSize page_spreadsheet"
      data-index="3"
    >
      <div
        class="__page-3 fail"
      >
        <span>
          Ошибка загрузки страницы
        </span>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html-3-pages-wo-size-with-spins 1`] = `
<div
  class="html js-doc-html html_withoutSize"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        тра-та-та
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="spinPage page_spreadsheet"
      >
        <div
          class="wait page-spin-top"
        >
          <lego-components_spin
            progress="true"
            size="l"
            view="default"
          />
        </div>
      </div>
    </div>
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="js-doc-page pageWithoutSize page_spreadsheet"
        data-index="2"
      >
        <div
          class="__page-2"
        >
          <div>
            yo
          </div>
        </div>
      </div>
    </div>
    <div
      class="pageWithoutSizeWrapper"
    >
      <div
        class="spinPage page_spreadsheet"
      >
        <div
          class="wait page-spin-bottom"
        >
          <lego-components_spin
            progress="true"
            size="l"
            view="default"
          />
        </div>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`with custom direct on desktop html-4-pages-with-size 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div
      class="js-doc-page page page_pdf waitingImageStub_blinking"
      data-index="1"
      style="width:360px;height:270px"
    >
      <div
        class="__page-1 wait"
      />
    </div>
    <div
      class="js-doc-page page page_pdf"
      data-index="2"
      style="width:180px;height:342px"
    >
      <div
        class="__page-2 fail"
      >
        <span>
          Ошибка загрузки страницы
        </span>
      </div>
    </div>
    <div
      class="js-doc-page page page_pdf"
      data-index="3"
      style="width:450px;height:810px"
    >
      <div
        class="__page-3"
        style="position:absolute;top:0;left:0;width:500px;height:900px;transform-origin:0 0;transform:scale(0.9)"
      >
        <div>
          this is magic
        </div>
      </div>
    </div>
    <div
      class="js-doc-page page page_pdf waitingImageStub"
      data-index="4"
      style="width:540px;height:720px"
    >
      <div
        class="__page-4 wait"
      />
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;
